@@ -3,17 +3,15 @@
 setlocal enabledelayedexpansion
 setlocal enableextensions
 
-call "%~dp0elasticsearch-env.bat" || exit /b 1
-
-%JAVA% ^
-  %ES_JAVA_OPTS% ^
-  -Des.path.home="%ES_HOME%" ^
-  -Des.path.conf="%ES_PATH_CONF%" ^
-  -Des.distribution.flavor="%ES_DISTRIBUTION_FLAVOR%" ^
-  -Des.distribution.type="%ES_DISTRIBUTION_TYPE%" ^
-  -cp "%ES_CLASSPATH%" ^
-  org.elasticsearch.plugins.PluginCli ^
-  %*
+set ES_JAVA_OPTS=--add-opens java.base/sun.security.provider=ALL-UNNAMED %ES_JAVA_OPTS%
+set ES_MAIN_CLASS=org.elasticsearch.plugins.PluginCli
+set ES_ADDITIONAL_CLASSPATH_DIRECTORIES=lib/tools/plugin-cli
+call "%~dp0elasticsearch-cli.bat" ^
+  %%* ^
+  || goto exit
+  
 
 endlocal
 endlocal
+:exit
+exit /b %ERRORLEVEL%
